--- a/main.css
+++ b/main.css
@@ -7,8 +7,22 @@
 
 /*media queries*/
 
-@media (max-width: 767px){
-    .mobile{
+/* media queries */
+
+@media (max-width:767px) {
+    .mobile {
         background-color: #0997d3;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .tablet {
+        background-color: #bada55;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1800px) {
+    .desktop {
+        background-color: #000;
     }
 }
